--- a/form/package.json
+++ b/form/package.json
@@ -7,13 +7,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "storybook": "storybook dev -p 6006",
+    "watch:storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
     "@mantine/core": "^8.2.2",
     "@mantine/form": "^8.2.2",
     "@mantine/hooks": "^8.2.2",
+    "@storybook/addon-themes": "^9.1.1",
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -24,10 +26,10 @@
   "devDependencies": {
     "@chromatic-com/storybook": "4.1.0",
     "@eslint/eslintrc": "^3",
-    "@storybook/addon-a11y": "9.1.0",
-    "@storybook/addon-docs": "9.1.0",
-    "@storybook/addon-vitest": "9.1.0",
-    "@storybook/nextjs-vite": "^9.1.0",
+    "@storybook/addon-a11y": "9.1.1",
+    "@storybook/addon-docs": "9.1.1",
+    "@storybook/addon-vitest": "9.1.1",
+    "@storybook/nextjs-vite": "^9.1.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -35,12 +37,12 @@
     "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
-    "eslint-plugin-storybook": "9.1.0",
+    "eslint-plugin-storybook": "9.1.1",
     "playwright": "^1.54.2",
     "postcss": "^8.5.6",
     "postcss-preset-mantine": "^1.18.0",
     "postcss-simple-vars": "^7.0.1",
-    "storybook": "9.1.0",
+    "storybook": "9.1.1",
     "typescript": "^5",
     "vitest": "^3.2.4"
   }
